gitops/manifests/traefik/genmachine/templates/service-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
  ports:
    - name: api
      port: 8080
      targetPort: traefik
      protocol: TCP
